# mathandML

./: LICENSE  README.md
libraries/maths/: CMakeLists.txt
libraries/mlp/: CMakeLists.txt  backprop.cpp  forprop.cpp  mlp.md
libraries/mlp/C/: backprop.c  forprop.c  loss.c  train.c  weights.c
libraries/mlp/C++/: activations.cpp  loss.cpp  mlp.cpp  weights.cpp
libraries/mlp/C++/include/: activations.hpp
libraries/mlp/C/include/: mlp.h
libraries/mlp/include/: mlp.hpp
maths/: CMakeLists.txt  maths.h
maths/src/basics/: CMakeLists.txt
maths/src/basics/include/: activations.hpp
maths/src/basics/src/: activations.cpp  activationsder.cpp
maths/src/linalg/: CMakeLists.txt
maths/src/linalg/include/: mat.hpp  vecops.hpp
maths/src/linalg/src/: mat.cpp  matops.cpp  vec1.cpp  vec2.cpp
maths/src/poly/include/: poly.hpp
maths/src/poly/src/: poly.cpp
mlp/: mlp.md
mlp/C/: CMakeLists.txt  activations.c  mlp.c
mlp/C++/: CMakeLists.txt
mlp/C/include/: activations.h
mlp/CL/: CMakeLists.txt
mlp/CL/include/: mlp.hpp
mlp/CL/src/: forprop.cpp
mlp/CUDA/: CMakeLists.txt
mlp/CUDA/include/: mlp.hpp
mlp/CUDA/src/: activations.cpp  backprop.cpp  train.cpp
mockCLsetup/: CMakeLists.txt  def.cpp  header.hpp  kernel.cl  main.cpp
mockCUDAsetup/: CMakeLists.txt  def.cu  header.hpp  kernel.cu  main.cpp
rnn/: rnn.md
rnn/c/: CMakeLists.txt  rnn.c  weights.c
rnn/c/include/: rnn.h
rnn/cpp/: CMakeLists.txt  rnn.cpp
rnn/cpp/include/: rnn.hpp
